Banner Section Add

--- a/index.html
+++ b/index.html
@@ -7,15 +7,35 @@
   <title>Flower Shop</title>
   <link rel="stylesheet" href="./assets/css/styles.css">
   <link rel="shortcut icon" href="./assets/images/pngwing 6.png" type="image/png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <div id="banner">
-
-    </div>
+    <section id="banner">
+      <div class="wrapper">
+        <div class="main-banner">
+          <div class="ban-left">
+            <h1>Let's make <br> beautiful flowers a <br> part of your life.</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+              looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
+              letters.</p>
+            <button>Shop Now</button>
+          </div>
+          <div class="ban-right">
+            <img src="./assets/images/pngwing 10.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
   </header>
-  <main></main>
+  <main>
+
+  </main>
   <footer></footer>
 </body>
 
