Featured Section Add

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <section id="banner">
+    <div id="banner">
       <div class="wrapper">
         <div class="main-banner">
           <div class="ban-left">
@@ -31,9 +31,34 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
   </header>
   <main>
+    <!-- Feature Section -->
+    <section id="feature">
+      <div class="wrapper">
+        <div class="feat-title">
+          <h1>Our Featured Flowers</h1>
+          <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+            looking
+            at its layout.</p>
+        </div>
+        <div class="feat-cat">
+          <div class="feat-cat-item ">
+            <div class="item-img item1"><img src="./assets//images//pngwing 10.png" alt=""></div>
+            <div class="item-title">Pink Flower Tree</div>
+          </div>
+          <div class="feat-cat-item ">
+            <div class="item-img item2"><img src="./assets//images//pngwing 5.png" alt=""></div>
+            <div class="item-title">Pink Flower Tree</div>
+          </div>
+          <div class="feat-cat-item ">
+            <div class="item-img item3"><img src="./assets//images//pngwing 7.png" alt=""></div>
+            <div class="item-title">Pink Flower Tree</div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
   <footer></footer>
