Hot Deal Section Add

--- a/index.html
+++ b/index.html
@@ -59,7 +59,22 @@
         </div>
       </div>
     </section>
-
+    <!-- Hot Deals Section -->
+    <section id="hotdeals">
+      <div class="wrapper">
+        <div class="main-deals">
+          <div class="deal-left">
+            <h1>Hot Deal ! Sale Up To 25% <span>Off</span></h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+              looking at its layout.</p>
+            <button>Sign Up</button>
+          </div>
+          <div class="deal-right">
+            <img src="./assets/images/pngwing 8.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
