--- a/index.html
+++ b/index.html
@@ -75,6 +75,30 @@
         </div>
       </div>
     </section>
+    <!-- Instagram Section -->
+    <section id="instagram">
+      <div class="wrapper">
+        <div class="ins-title">
+          <h1>Instagram</h1>
+          <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+            looking at its layout.</p>
+        </div>
+        <div class="ins-cat">
+          <div class="ins-item">
+            <img src="./assets/images/Rectangle 4.png" alt="">
+          </div>
+          <div class="ins-item">
+            <img src="./assets/images/Rectangle 5.png" alt="">
+          </div>
+          <div class="ins-item">
+            <img src="./assets/images/Rectangle 6.png" alt="">
+          </div>
+          <div class="ins-item">
+            <img src="./assets/images/Flower 01.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
