Leatest Deals Section Add

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         </div>
         <div class="ins-cat">
           <div class="ins-item">
+            <img src="./assets/images/Flower 01.png" alt="">
+          </div>
+          <div class="ins-item">
             <img src="./assets/images/Rectangle 4.png" alt="">
           </div>
           <div class="ins-item">
@@ -93,10 +96,24 @@
           <div class="ins-item">
             <img src="./assets/images/Rectangle 6.png" alt="">
           </div>
-          <div class="ins-item">
-            <img src="./assets/images/Flower 01.png" alt="">
+
+        </div>
+      </div>
+    </section>
+    <!-- Leates Deals -->
+    <section id="leates-tdeals">
+      <div class="wrapper">
+        <div class="leat-deals">
+          <div class="leat-title">
+            <h1>Get The Latest Deals</h1>
+            <p>$30 coupon for first shopping</p>
+          </div>
+          <div class="form">
+            <input type="email" name="" id="" placeholder="Enter your email here....">
+            <input type="button" value="Subscribe">
           </div>
         </div>
+
       </div>
     </section>
   </main>
