--- a/index.html
+++ b/index.html
@@ -117,7 +117,15 @@
       </div>
     </section>
   </main>
-  <footer></footer>
+  <footer id="footer">
+    <div class="foot-content">
+      <h1>Flower<span>Shop</span></h1>
+      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
+        at its layout.</p>
+    </div>
+    <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+
+  </footer>
 </body>
 
 </html>
