Services Section Add

--- a/index.html
+++ b/index.html
@@ -59,6 +59,25 @@
         </div>
       </div>
     </section>
+    <!-- Services -->
+    <section id="services">
+      <div class="wrapper">
+        <div class="services">
+          <div class="ser-item">
+            <img src="./assets/images/Group 57.png" alt="">
+            <p>Same Day Delivery. Click & Collect.</p>
+          </div>
+          <div class="ser-item">
+            <img src="./assets/images/Group 58.png" alt="">
+            <p>Fresh Flowers. Local Growers.</p>
+          </div>
+          <div class="ser-item">
+            <img src="./assets/images/Group 59.png" alt="">
+            <p>24/7 Free Support.</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Hot Deals Section -->
     <section id="hotdeals">
       <div class="wrapper">
