--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
         at its layout.</p>
     </div>
-    <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+    <p class="credit">@2020-2023, FlowerShop.com. All rights reserved. </p>
 
   </footer>
 </body>
