--- a/index.html
+++ b/index.html
@@ -135,6 +135,74 @@
 
       </div>
     </section>
+    <!-- Instagram Section -->
+    <section id="shop">
+      <div class="wrapper">
+        <div class="shop-title">
+          <h1>Shop</h1>
+          <p>Flowers have incredible diversity which probably is the most distinctive feature for the identification of
+            plants. They have been a constant presence in society which symbolise beauty and love.</p>
+        </div>
+        <div class="shop-cat">
+          <div class="shop-item">
+            <div class="img">
+              <img src="./assets/images/Rectangle 6.png" alt="">
+            </div>
+            <div class="shop-content">
+              <h1>Flower 1</h1>
+              <div class="btm">
+                <div class="price">$2</div>
+                <div class="cart">
+                  <button>Add to Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="shop-item">
+            <div class="img">
+              <img src="./assets/images/Rectangle 5.png" alt="">
+            </div>
+            <div class="shop-content">
+              <h1>Flower 2</h1>
+              <div class="btm">
+                <div class="price">$2</div>
+                <div class="cart">
+                  <button>Add to Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="shop-item">
+            <div class="img">
+              <img src="./assets/images/Rectangle 4.png" alt="">
+            </div>
+            <div class="shop-content">
+              <h1>Flower 3</h1>
+              <div class="btm">
+                <div class="price">$2</div>
+                <div class="cart">
+                  <button>Add to Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="shop-item">
+            <div class="img">
+              <img src="./assets/images/Flower 01.png" alt="">
+            </div>
+            <div class="shop-content">
+              <h1>Flower 4</h1>
+              <div class="btm">
+                <div class="price">$2</div>
+                <div class="cart">
+                  <button>Add to Cart</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer id="footer">
     <div class="foot-content">
