Convert to Reactjs Using Vite

--- a/index.html
+++ b/index.html
@@ -1,218 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flower Shop</title>
-  <link rel="stylesheet" href="./assets/css/styles.css">
-  <link rel="shortcut icon" href="./assets/images/pngwing 6.png" type="image/png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-</head>
-
-<body>
-  <header>
-    <div id="banner">
-      <div class="wrapper">
-        <div class="main-banner">
-          <div class="ban-left">
-            <h1>Let's make <br> beautiful flowers a <br> part of your life.</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
-              looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
-              letters.</p>
-            <button>Shop Now</button>
-          </div>
-          <div class="ban-right">
-            <img src="./assets/images/pngwing 10.png" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-  <main>
-    <!-- Feature Section -->
-    <section id="feature">
-      <div class="wrapper">
-        <div class="feat-title">
-          <h1>Our Featured Flowers</h1>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking
-            at its layout.</p>
-        </div>
-        <div class="feat-cat">
-          <div class="feat-cat-item ">
-            <div class="item-img item1"><img src="./assets//images//pngwing 10.png" alt=""></div>
-            <div class="item-title">Pink Flower Tree</div>
-          </div>
-          <div class="feat-cat-item ">
-            <div class="item-img item2"><img src="./assets//images//pngwing 5.png" alt=""></div>
-            <div class="item-title">Pink Flower Tree</div>
-          </div>
-          <div class="feat-cat-item ">
-            <div class="item-img item3"><img src="./assets//images//pngwing 7.png" alt=""></div>
-            <div class="item-title">Pink Flower Tree</div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Services -->
-    <section id="services">
-      <div class="wrapper">
-        <div class="services">
-          <div class="ser-item">
-            <img src="./assets/images/Group 57.png" alt="">
-            <p>Same Day Delivery. Click & Collect.</p>
-          </div>
-          <div class="ser-item">
-            <img src="./assets/images/Group 58.png" alt="">
-            <p>Fresh Flowers. Local Growers.</p>
-          </div>
-          <div class="ser-item">
-            <img src="./assets/images/Group 59.png" alt="">
-            <p>24/7 Free Support.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Hot Deals Section -->
-    <section id="hotdeals">
-      <div class="wrapper">
-        <div class="main-deals">
-          <div class="deal-left">
-            <h1>Hot Deal ! Sale Up To 25% <span>Off</span></h1>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
-              looking at its layout.</p>
-            <button>Sign Up</button>
-          </div>
-          <div class="deal-right">
-            <img src="./assets/images/pngwing 8.png" alt="">
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Instagram Section -->
-    <section id="instagram">
-      <div class="wrapper">
-        <div class="ins-title">
-          <h1>Instagram</h1>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout.</p>
-        </div>
-        <div class="ins-cat">
-          <div class="ins-item">
-            <img src="./assets/images/Flower 01.png" alt="">
-          </div>
-          <div class="ins-item">
-            <img src="./assets/images/Rectangle 4.png" alt="">
-          </div>
-          <div class="ins-item">
-            <img src="./assets/images/Rectangle 5.png" alt="">
-          </div>
-          <div class="ins-item">
-            <img src="./assets/images/Rectangle 6.png" alt="">
-          </div>
-
-        </div>
-      </div>
-    </section>
-    <!-- Leates Deals -->
-    <section id="leates-tdeals">
-      <div class="wrapper">
-        <div class="leat-deals">
-          <div class="leat-title">
-            <h1>Get The Latest Deals</h1>
-            <p>$30 coupon for first shopping</p>
-          </div>
-          <div class="form">
-            <input type="email" name="" id="" placeholder="Enter your email here....">
-            <input type="button" value="Subscribe">
-          </div>
-        </div>
-
-      </div>
-    </section>
-    <!-- Instagram Section -->
-    <section id="shop">
-      <div class="wrapper">
-        <div class="shop-title">
-          <h1>Shop</h1>
-          <p>Flowers have incredible diversity which probably is the most distinctive feature for the identification of
-            plants. They have been a constant presence in society which symbolise beauty and love.</p>
-        </div>
-        <div class="shop-cat">
-          <div class="shop-item">
-            <div class="img">
-              <img src="./assets/images/Rectangle 6.png" alt="">
-            </div>
-            <div class="shop-content">
-              <h1>Flower 1</h1>
-              <div class="btm">
-                <div class="price">$2</div>
-                <div class="cart">
-                  <button>Add to Cart</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="shop-item">
-            <div class="img">
-              <img src="./assets/images/Rectangle 5.png" alt="">
-            </div>
-            <div class="shop-content">
-              <h1>Flower 2</h1>
-              <div class="btm">
-                <div class="price">$2</div>
-                <div class="cart">
-                  <button>Add to Cart</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="shop-item">
-            <div class="img">
-              <img src="./assets/images/Rectangle 4.png" alt="">
-            </div>
-            <div class="shop-content">
-              <h1>Flower 3</h1>
-              <div class="btm">
-                <div class="price">$2</div>
-                <div class="cart">
-                  <button>Add to Cart</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="shop-item">
-            <div class="img">
-              <img src="./assets/images/Flower 01.png" alt="">
-            </div>
-            <div class="shop-content">
-              <h1>Flower 4</h1>
-              <div class="btm">
-                <div class="price">$2</div>
-                <div class="cart">
-                  <button>Add to Cart</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-  <footer id="footer">
-    <div class="foot-content">
-      <h1>Flower<span>Shop</span></h1>
-      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
-        at its layout.</p>
-    </div>
-    <p class="credit">@2020-2023, FlowerShop.com. All rights reserved. </p>
-
-  </footer>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
